--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/ws": "^8.5.13",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
